# c-vec

./: CMakeLists.txt
src/: main.c  vector.c  vector.h
